--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.21.1",
     "bcrypt": "^5.0.0",
+    "env": "0.0.2",
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
