--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "env": "0.0.2",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.0"
   },
