--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server-express": "^2.21.1",
     "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "env": "0.0.2",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
